# tjr_profile

./: .gitignore  Dockerfile  META  Makefile  README.md  bash_env.sh  config.ml  dune  dune-project  tjr_profile.ml  tjr_profile.opam  tjr_profile_with_core.opam
.old/: Makefile  tjr_profile_with_core.install
_src/: pretty_print.ml  profile_single_function.ml  tjr_profile.ml  with_array.ml
_src-core/: dune  optcomp_config.ml
_src-small/: example.ml  small.ml  small_intf.ml
_test/: dune
docs/: index.html
docs/tjr_profile/: index.html
docs/tjr_profile/Tjr_profile/: index.html
docs/tjr_profile/Tjr_profile/Profile_manager/: index.html
docs/tjr_profile/Tjr_profile__/: index.html
docs/tjr_profile/Tjr_profile__/Core/: index.html
docs/tjr_profile/Tjr_profile__/Misc/: index.html
docs/tjr_profile/Tjr_profile__/Pretty_print/: index.html
docs/tjr_profile/Tjr_profile__/Profile_intf/: index.html
docs/tjr_profile/Tjr_profile__/Profile_manager/: index.html
docs/tjr_profile/Tjr_profile__/Tjr_profile_core/: index.html
docs/tjr_profile/Tjr_profile__/Types/: index.html
docs/tjr_profile/Tjr_profile__Core/: index.html
docs/tjr_profile/Tjr_profile__Misc/: index.html
docs/tjr_profile/Tjr_profile__Pretty_print/: index.html
docs/tjr_profile/Tjr_profile__Profile_intf/: index.html
docs/tjr_profile/Tjr_profile__Profile_manager/: index.html
docs/tjr_profile/Tjr_profile__Tjr_profile_core/: index.html
docs/tjr_profile/Tjr_profile__Types/: index.html
docs/tjr_profile/Tjr_profile__Util/: index.html
docs/tjr_profile/Tjr_profile__Waypoints/: index.html
misc/: optcomp_config.ml_
src/: .merlin  core.ml  core_.ml_  design.mld  dune  intf_.ml  optcomp_config.ml  optcomp_config_.ml  pretty_print.ml  profile_intf.ml  profile_manager.ml  profile_single.ml  profile_single_function.ml  profiling_optcomp_config.ml  proposed_intf.ml  single_file_impl_2022q3.ml  tjr_profile.ml  tjr_profile_core.ml  types.ml  util.ml  waypoints.ml  with_array.ml
src-core/: config.ml  tjr_profile_core.ml
src-small/: dune  small.ml  small_intf.ml  tjr_profile_small.ml
src/_old/: old.ml_  profile_manager.ml_  util.ml
src_with_core/: .merlin  dune  tjr_profile_with_core.ml
test/: test.ml
(+5 files in other folders)
