opam-version: "1.2"
name: "tjr_profile"

version: "0.0.1"

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_profile"
bug-reports: "https://github.com/tomjridge/tjr_profile/issues"
dev-repo: "https://github.com/tomjridge/tjr_profile.git"

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "tjr_lib_core"
]

