opam-version : "2.0"
name         : "tjr_profile_with_core"
version      : "0.0.1"
synopsis     : "A simple profiling library (with J.St. Core timing)"

maintainer   : "Tom Ridge <tom.j.ridge@googlemail.com>"
authors      : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage     : "https://github.com/tomjridge/tjr_profile"
bug-reports  : "https://github.com/tomjridge/tjr_profile/issues"
dev-repo     : "git://github.com/tomjridge/tjr_profile.git"

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [ "tjr_profile" "core" ]

